--- a/views/auth.html
+++ b/views/auth.html
@@ -64,7 +64,7 @@
                     <input class="form-control" type="email" placeholder="email" id="emailLogIn" name="emailLogIn"
                         required aria-label="Default" aria-describedby="inputGroup-sizing-default">
                     <div class="input-group-prepend">
-                        <span class="input-group-text">Email</span>
+                        <span class="input-group-text">Username</span>
                     </div>
                 </div>
 
@@ -89,7 +89,7 @@
                     <input type="email" placeholder="email" id="emailSignUp" name="emailSignUp" required
                         class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
                     <div class="input-group-prepend">
-                        <span class="input-group-text">Email</span>
+                        <span class="input-group-text">Username</span>
                     </div>
                 </div>
 
