--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dhanam Proect</title>
+    <title>Tanmay Modi CC practical</title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -29,7 +29,7 @@
 
 <body>
     <!-- navbar starts -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,39 +53,64 @@
 
     <!-- navbar ends -->
 
-
     <div class="container">
-        <div class="row d-flex justify-content-center">
-            <div class="col-sm-6">
-                <!-- select time zomes -->
-                <label zone>Select Zone</label>
-                <p class="form-control" id="zoneData"></p>
-                <!-- select date range -->
-                <label for="startDate">Start Date</label><br>
-                <input type="date" name="startDate" id="startDate" class="form-control"><br>
-                <label for="endDate">End Date</label><br>
-                <input type="date" name="endDate" id="endDate" class="form-control"><br>
-                <button onclick="getData()">
-                    Fetch Data
-                </button>
-            </div>
-        </div>
-    </div>
-    <!-- 
-    <form action="/forms" method="POST">
-        <input type="text" placeholder="name" name="name" class="form-field">
-        <input type="text" placeholder="quote" name="quote" class="form-field">
-        <button type="submit">Submit</button>
-    </form>
-    <br>
-    <form action="/update" method="POST">
-        <input type="text" placeholder="name" name="name" class="form-field">
-        <input type="text" placeholder="quote" name="quote" class="form-field">
-        <button type="submit">Update</button>
-    </form> -->
+        <h2>Hello, <strong>Tanmay Modi</strong> </h2>
+        <p>Following are the details of the users:</p>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Emp ID</th>
+                    <th>FName</th>
+                    <th>LName</th>
+                    <th>Dob</th>
+                    <th>Contact</th>
+                    <th>Job Role</th>
+                    <th>Monthly Salary</th>
+                    <th>Yearly Bonus</th>
+                    <th>Total</th>
 
-    <br>
-    <p id="holidays"></p>
+                </tr>
+            </thead>
+            <tbody>
+
+                <div id="nnn">
+                    <tr>
+                        <td>111915132</td>
+                        <td>Tanmay</td>
+                        <td>Modi</td>
+                        <td>24-10-1999</td>
+                        <td>7089436882</td>
+                        <td>HR</td>
+                        <td>120000</td>
+                        <td>200000</td>
+                        <td>1640000</td>
+                    </tr>
+                    <tr>
+                        <td>111915113</td>
+                        <td>Sarthak</td>
+                        <td>Gupta</td>
+                        <td>17-06-2002</td>
+                        <td>7589456854</td>
+                        <td>Project Manger</td>
+                        <td>75000</td>
+                        <td>125000</td>
+                        <td>1250000</td>
+                    </tr>
+                    <tr>
+                        <td>111915092</td>
+                        <td>Piyush</td>
+                        <td>Gupta </td>
+                        <td>17-03-2001</td>
+                        <td>752563415</td>
+                        <td>Senior SDE</td>
+                        <td>50000</td>
+                        <td>100000</td>
+                        <td>700000</td>
+                    </tr>
+                </div>
+            </tbody>
+        </table>
+    </div>
 
 
 
@@ -97,64 +122,19 @@
                     console.log("result is:");
                     // unmute ni kr sakta abi
                     console.log(res);
-                    var zones = res['zones'];
-                    console.log(zones);
-                    var data = (`<select name="zones" id="zones">`);
-                    zones.forEach(zone => {
-                        data += (`<option name="zones" value="${zone}">${zone}</option>`);
-                    });
-                    data += `</select>`;
+                    var ee = res['ee'];
+                    var dd = res['dd'];
 
-                    $('#zoneData').html(data);
+
+                    console.log(ee);
+                    var nnn = "";
+                    var sal = ee['monthlySalary'];
+                    sal = sal * 12 + ee[yearlyBonus];
+                    $('्रnnn').html(nnn);
 
                 }
             });
         });
-
-        function getData(e) {
-            var startDate = document.getElementById('startDate').value;
-            var endDate = document.getElementById('endDate').value;
-            var zone = document.getElementById('zones').value;
-            console.log(startDate, endDate, zone);
-            $.post({
-                url: '/getData',
-                data: {
-                    'startDate': startDate,
-                    'endDate': endDate,
-                    'zone': zone
-                },
-                success: function (res) {
-                    console.log("result is:");
-                    console.log(res['holidays']);
-                    var holis = "";
-                    holis += "<table><tr><th>Holidays</th><th>Date</th></tr>";
-                    res["holidays"].forEach(holiday => {
-                        holis += "<tr>";
-                        holis += "<td>" + holiday["title"] + "</td>";
-                        holis += "<td>" + holiday["date"] + "</td>";
-                        holis += "</tr>";
-                    });
-                    holis += "</table>";
-
-                    $('#holidays').html(holis);
-
-                    // var zones = res['zones'];
-                    // console.log(zones);
-
-                }
-            });
-
-        }
-
-        function logout() {
-            $.post({
-                url: '/logout',
-                success: function () {
-                    window.alert("logged out");
-                    window.location.href = '/auth';
-                }
-            })
-        }
     </script>
 
 
