--- a/views/index.html
+++ b/views/index.html
@@ -29,7 +29,7 @@
 
 <body>
     <!-- navbar starts -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -86,8 +86,8 @@
                         <td>1640000</td>
                     </tr>
                     <tr>
-                        <td>111915113</td>
-                        <td>Sarthak</td>
+                        <td>111915120</td>
+                        <td>Samarth</td>
                         <td>Gupta</td>
                         <td>17-06-2002</td>
                         <td>7589456854</td>
@@ -97,9 +97,9 @@
                         <td>1250000</td>
                     </tr>
                     <tr>
-                        <td>111915092</td>
-                        <td>Piyush</td>
-                        <td>Gupta </td>
+                        <td>111915045</td>
+                        <td>Edara</td>
+                        <td>Janardhan</td>
                         <td>17-03-2001</td>
                         <td>752563415</td>
                         <td>Senior SDE</td>
